security update: login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/foodmart1
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Opeyemi1234
 spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
