--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,18 @@
             <scope>test</scope>
         </dependency>
 
-     <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-mail</artifactId>
-        <version>2.5.6</version>
-     </dependency>
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.5.6</version>
+         </dependency>
+
+        <!-- Swagger Dependency-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.4</version>
+        </dependency>
 
     </dependencies>
 
