--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@
 ##spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/facebookdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/food
 spring.datasource.username=postgres
-spring.datasource.password=emmanuel
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
