--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,10 +27,10 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-#    - name: Set environment variables
-#      env:
-#        DB_USERNAME: ${{ secrets.DB_USERNAME }}
-#        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+    - name: Set environment variables
+      env:
+        DB_USERNAME: ${{ secrets.DB_USERNAME }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
