--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,6 @@
-#
-#spring.datasource.url=jdbc:mysql://localhost:3306/foodmart1
-#spring.datasource.username=root
-#spring.datasource.password=password
-#spring.jpa.hibernate.ddl-auto=update
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#
-#server.port = 9198
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/foodmart1
-#spring.datasource.username=root
-#spring.datasource.password=password
-##spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-#spring.jpa.show-sql=true
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/food
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/week8db
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
