--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,12 +16,12 @@
 ##spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/food
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/food
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #EmailService Integration Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
