--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,12 +7,11 @@
 # documentation.
 
 name: Java CI with Maven
-
 on:
   push:
     branches: [ "develop" ]
   pull_request:
-    branches: [ "develop" ]
+    types: [ opened, reopened, labeled, synchronize ]
 
 jobs:
   build:
