--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.profiles.active=dev
 ## Hibernate Properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/foodmart
 spring.datasource.username=postgres
-spring.datasource.password=franklin3083
+spring.datasource.password=9026
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 ## EmailService Integration Configuration
 spring.mail.host=smtp.gmail.com
