--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 ## Hibernate Properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/foodmart
 spring.datasource.username=postgres
-spring.datasource.password=franklin3083
+spring.datasource.password=9024
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
