--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ spring.datasource.username=postgres
 spring.datasource.password=Mypgpassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 ## EmailService Integration Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=foodmart.decagon@gmail.com
-spring.mail.password=lpscmjwcogbhwzgm
+spring.mail.username=decagon.foodmart.app@gmail.com
+spring.mail.password=xgagxvkduuykedkr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
